package org.example.Head02_ObjectOrientedProgramming.example16;

public interface Payment {
    void pay(double amount);
}
